# email_summary

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  celerybeat-schedule  docker-compose.yml  pyproject.toml
app/: config.py  deps.py  main.py
app/core/: auth_context.py  cache.py  encryption.py  exceptions.py  logging.py  security.py
app/db/: base.py  models.py  session.py
app/db/migrations/: env.py
app/db/migrations/versions/: 0001_initial.py
app/modules/clients/: models.py  repository.py  router.py  schemas.py  service.py
app/modules/email_source/: interface.py  mock.py  models.py
app/modules/identity/: models.py  repository.py  router.py  schemas.py  service.py
app/modules/jobs/: models.py  repository.py  router.py  schemas.py  service.py
app/modules/reporting/: router.py  schemas.py  service.py
app/modules/summarization/: gemini_client.py  models.py  prompts.py  repository.py  router.py  schemas.py  service.py  tasks.py
app/observability/: metrics.py  middleware.py
app/workers/: beat_schedule.py  celery_app.py
docs/: DESIGN.md
scripts/: add_new_emails.py  generate_keys.py  seed.py
tests/unit/: test_clients_authz.py  test_design_gap_regressions.py  test_encryption.py  test_gemini_mock.py
