[project]
name = "email-context-system"
version = "0.1.0"
description = "Email context summary backend for a CPA firm case study."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13.2",
    "asyncpg>=0.29.0",
    "bcrypt>=4.1.3",
    "celery[redis]>=5.4.0",
    "cryptography>=42.0.8",
    "email-validator>=2.2.0",
    "fastapi>=0.115.0",
    "greenlet>=3.0.3",
    "httpx>=0.27.0",
    "isort>=8.0.1",
    "prometheus-client>=0.20.0",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.4.0",
    "pyjwt>=2.9.0",
    "python-multipart>=0.0.9",
    "redis>=5.0.8",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.32",
    "structlog>=24.4.0",
    "tenacity>=8.5.0",
    "uvicorn[standard]>=0.30.5",
]

[project.optional-dependencies]
dev = [
    "aiosqlite>=0.20.0",
    "mypy>=1.11.1",
    "pytest>=8.3.2",
    "pytest-asyncio>=0.23.8",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.7",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "C4", "T20"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"app/db/migrations/**/*.py" = ["E501"]
"scripts/*.py" = ["T201"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
warn_return_any = false
warn_unused_ignores = true
exclude = ["app/db/migrations"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-p no:cacheprovider"
